# webgpu-sample-project

./: Application.cpp  Application.h  CMakeLists.txt  ResourceManager.cpp  ResourceManager.h  main.cpp
resources/: compute-shader.wgsl
shaders/: main.fragment.wgsl  main.vertex.wgsl
